2316: Prefer not to specify UTF-8 if it's used by default
Reviewed-by: erikj, zsong